Quality Code: List.get(0) by getFirst, update postman collection